Improve HttpHeaders
Better immutability

No need to make mutable headers thread-safe. These are typically created
in a single thread and then used after that. Use external
synchronization if needed.